config datamodel and api
