# main.py
@@ -1,7 +1,8 @@
 from fastapi import FastAPI
 
 from data import Data
-from values import Values
+from models import Values
+from models import Config
 
 app = FastAPI(servers=[{"url": "http://localhost:8000", "description": "dev"}])
 
@@ -14,3 +15,15 @@ async def poll(values: Values):
 @app.get("/results/{id}")
 async def results(id: str) -> Values: 
     return d.results(id)
+
+@app.post("/clear")
+async def clear():
+    return d.clear()
+
+@app.post("/config")
+async def setConfig(config: Config):
+    return d.setConfig(config)
+
+@app.get("/config/{id}")
+async def getConfig(id: str) -> Config: 
+    return d.getConfig(id)
